page 16, changed the body of the flagging confirmation modal to reflect something closer to the wireframe's dialogue.

--- a/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
@@ -24,15 +24,13 @@
 
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Questions about flagging?</h2>
+                <h2>Thank you!</h2>
             </div>
             <div class="modal-body">
-                <p><b>What is flagging:</b> Flagging something will remove the item from view as soon as you flag it.</p>
-                <p><b>When to flag:</b> You should flag items if and only if it does not adhere to the <em>posting policy</em>.</p>
-                <p><b>Flagging is anonymous:</b> The poster will not know who flagged their item. Only site admins can.</p>
+                <p>Thanks for flagging and doing your part to keep the community safe and focused on doing what it does best. The post has been removed!</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-danger" data-dismiss="modal">Thanks</button>
+                <button type="button" class="btn btn-danger" data-dismiss="modal">Done!</button>
             </div>
         </div>
     </div>
