--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -347,6 +347,7 @@
     margin-left: 250px;
     margin-right: 50px;
     margin-top: 25px;
+    margin-bottom: 100px;
     background-color: lightgray;
     text-align: center;
 }
