in _Layout, a logout button added to header.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
                 ReuseSU
             </div>
             <div class="header-motto">
-                Simple, sustainable sharing
+                Simple, sustainable sharing 
+                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Logout</button>
             </div>
         </div>
 
