--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -13,7 +13,8 @@
 }
 
 .header-title {
-    font-size: 64px;
+    font-size: 40px;
+    padding-top: 5px;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
