--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -28,10 +28,10 @@
 .header-motto{
     float: right;
     font-style: italic;
-    font-size: x-large;
+    font-size: 16pt;
     text-align: right;
-    margin-top: 30px;
-    margin-right: 10px;
+    margin-top: 20px;
+    margin-right: 0px;
 }
 
 .header-css{
