_Layout, logout button in header changed to be header-logout class, instead of sidebar-upper class.

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="header-motto">
                 Simple, sustainable sharing 
-                <button type="button" class="btn btn-outline-dark sidebar-upper-button">Logout</button>
+                <button type="button" class="btn btn-outline-dark header-logout">Logout</button>
             </div>
         </div>
 
