--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -34,6 +34,15 @@
     margin-right: 0px;
 }
 
+.header-logout {
+    background-color: #d7d7d7;
+    height: 25px;
+    width: 92px;
+    padding: 0px;
+    margin: 0px 10px 0px 10px;
+    border: 1px solid black;
+}
+
 .header-css{
     width: 1110px;
     margin-left: auto;
