_Layout utility-bar is now in a container class div (preparing to distribute layout)

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -22,16 +22,13 @@
                 ReuseSU
             </div>
             <div class="header-motto">
-                Simple, sustainable sharing 
+                Simple, sustainable sharing
                 <button type="button" class="btn btn-outline-dark header-logout">Logout</button>
             </div>
         </div>
 
     </header>
-
-    <!-- Contains everything below the header, except modal divs -->
     <div class="container">
-
         <!-- Contains the New Post and Search functionality -->
         <div class="utility-bar">
             <div class="new-post">
@@ -53,6 +50,10 @@
                 <input type="text" placeholder="Search.." name="search" class="search-input">
             </div>
         </div>
+    </div>
+    <!-- Contains everything below the header, except modal divs -->
+    <div class="container">
+
 
         <!-- A container for the sidebar information-->
         <div class="sidebar">
