--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -168,13 +168,15 @@
 </div>
 
 <div id="tutorial-modal-3" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 0px 200px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
-        <div class="modal-content">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
             <h3 class="modal-title boldfont">Welcome</h3>
             <div class="modal-body">
-                <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+                <!--<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+                    -->
+                <img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
             </div>
             <div class="modal-footer">
                 <p class="modaltext">Thigns</p>
