Add CSS for Modal 3 image to site.css

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -101,6 +101,13 @@
     width: auto;
 }
 
+.modal-tutorial-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 700px;
+}
+
 .reusese-center {
     display: block;
     margin-left: auto;
