--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -184,16 +184,18 @@
 </div>
 
 <div id="tutorial-modal-4" class="modal fade in">
-    <div class="modal-dialog modal-lg" style="margin: 0px 200px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
-        <div class="modal-content">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-header">
             </div>
             <h3 class="modal-title boldfont">Welcome</h3>
             <div class="modal-body">
-                <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+                <!--<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+                    -->
+                <img src="~/img/10_tutorial_finish.jpg" class="modal-tutorial-img" />
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-5">next</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#">next</button>
             </div>
         </div>
     </div>
