Start adding formatted text to Modal 3 using index.cshtml and site.css

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -174,6 +174,13 @@
             <div class="modal-body">
                 <!--<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
                     -->
+                <div class="reuse-mod-body">
+                    Thank you!  Let's get started with a<br />
+                    quick walk-through of the site.
+                </div>
+                <div>
+                    This should only take a few minutes.
+                </div>
                 <img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
             </div>
             <div class="modal-footer">
