Continue formatting modal 3 Text in site.css and index.cshtml

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -178,7 +178,8 @@
                     Thank you!  Let's get started with a<br />
                     quick walk-through of the site.
                 </div>
-                <div>
+                <br />
+                <div class="modal-body-small-it">
                     This should only take a few minutes.
                 </div>
                 <img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
