Format intro text on Modal 3 in index.cshtml

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -175,7 +175,7 @@
                 <!--<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
                     -->
                 <div class="reuse-mod-body">
-                    Thank you!  Let's get started with a<br />
+                    <em>Thank you!</em>  &nbsp;Let's get started with a<br />
                     quick walk-through of the site.
                 </div>
                 <br />
