--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -173,7 +173,7 @@
             <h3 class="modal-title boldfont">Welcome</h3>
             <div class="modal-body">
                 <!--<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
-                    -->
+        -->
                 <div class="reuse-mod-body">
                     <em>Thank you!</em>  &nbsp;Let's get started with a<br />
                     quick walk-through of the site.
@@ -182,6 +182,15 @@
                 <div class="modal-body-small-it">
                     This should only take a few minutes.
                 </div>
+                <br />
+                <br />
+                <div class="modal-buttons">
+                    <div class="modal-button-container">
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Get Started</button><br />
+                    </div>
+                </div>
+
+
                 <img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
             </div>
             <div class="modal-footer">
