_Layout, made the "new post" div a link to 05_NewPostSUPurchase

--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -32,12 +32,14 @@
         <!-- Contains the New Post and Search functionality -->
         <div class="utility-bar">
             <div class="new-post">
-                <div class="new-post-plus">
-                    +
-                </div>
-                <div class="new-post-afterplus">
-                    New Post
-                </div>
+                <a href="../05_NewPostSUPurchase" style="color: black;">
+                    <div class="new-post-plus">
+                        +
+                    </div>
+                    <div class="new-post-afterplus">
+                        New Post
+                    </div>
+                </a>
             </div>
             <div class="search-bar">
                 <select name="SortBy" id="SortBy" class="sort-by">
