--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -15,21 +15,23 @@
     <div class="create-post-subheader">Page 1 of 3</div>
 </div>
 
-<main role="main" class="pb-3">
-    <div class="create-post-body" style="height: 400px">
-        <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
-        <form action="">
-            <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
-            <label for="Yes" style="font-size: 30px;">Yes</label><br>
-            <input type="radio" id="No" name="SUPurchase" value="No">
-            <label for="No" style="font-size: 30px;">No</label><br>
-            <br>
+<div class="container">
+    <main role="main" class="pb-3">
+        <div class="create-post-body" style="height: 400px">
+            <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
+            <form action="">
+                <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
+                <label for="Yes" style="font-size: 30px;">Yes</label><br>
+                <input type="radio" id="No" name="SUPurchase" value="No">
+                <label for="No" style="font-size: 30px;">No</label><br>
+                <br>
             </form>
             <!-- Next Button-->
             <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/06_NewPostCategorySelection">
                 Next
             </a>
+        </div>
+
+
+    </main>
 </div>
-
-
-</main>
