Added "Skip and go directly to site" in Modal 3 using index.cshtml and site.css

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -190,6 +190,10 @@
                     </div>
                 </div>
 
+                <div class="modal-link" data-dismiss="modal">
+                    <a href="">Skip and Go Directly to Site</a>
+                </div>
+                <br />
 
                 <img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
             </div>
