--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -152,6 +152,11 @@
     background-color: #EEE;
 }
 
+.modal-link{
+    text-align: center;
+    text-decoration: underline;
+}
+
 .checkbox-modal-area {
     margin-left: 50px;
 }
