--- a/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
+++ b/LoydCrafts.WebSite/Pages/06_NewPostCategorySelection.cshtml
@@ -10,26 +10,28 @@
 <h1>NewPostCategorySelection</h1>
 -->
 
-    <div class="create-post-header">
-        Make a New Post<br />
-        <div class="create-post-subheader">Page 2 of 3</div>
-    </div>
+<div class="create-post-header">
+    Make a New Post<br />
+    <div class="create-post-subheader">Page 2 of 3</div>
+</div>
 
-<main role="main" class="pb-3">
-    <div class="create-post-body" style="height: 500px">
-        <div class="create-post-title" style="margin-bottom: 80px">Which category best describes your item?</div>
+<div class="container">
+    <main role="main" class="pb-3">
+        <div class="create-post-body" style="height: 500px">
+            <div class="create-post-title" style="margin-bottom: 80px">Which category best describes your item?</div>
 
-        <div class="create-post-checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
-        <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Decor</div>
-        <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Books</div>
-        <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Electronics</div>
-        <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Misc</div>
-        
-        <!-- Next Button-->
-        <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/07_NewPostItemSpecifics">
-            Next
-        </a>
-    </div>
+            <div class="create-post-checkbox"><input type="checkbox" checked />&nbsp;Furniture</div>
+            <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Decor</div>
+            <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Books</div>
+            <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Electronics</div>
+            <div class="create-post-checkbox"><input type="checkbox" />&nbsp;Misc</div>
+
+            <!-- Next Button-->
+            <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/07_NewPostItemSpecifics">
+                Next
+            </a>
+        </div>
 
 
-</main>
+    </main>
+</div>
