page 07, centered "main" div by putting it in "container" div.

--- a/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
+++ b/LoydCrafts.WebSite/Pages/07_NewPostItemSpecifics.cshtml
@@ -4,9 +4,13 @@
     ViewData["Title"] = "NewPostItemSpecifics";
 }
 
-    <div class="create-post-header">Make a New Post<br />
-        <div class="create-post-subheader">Page 3 of 3</div>
-    </div>
+
+<div class="create-post-header">
+    Make a New Post<br />
+    <div class="create-post-subheader">Page 3 of 3</div>
+</div>
+
+<div class="container">
 
     <main role="main" class="pb-3">
         <div class="create-post-body">
@@ -45,6 +49,7 @@
                 Publish Post
             </a>
         </div>
-        
+
 
     </main>
+</div>
