Remove redundant picture from Modal 3 in index.cshtml

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -270,7 +270,8 @@
                 </div>
                 <br />
 
-                <img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
+                <!--<img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
+                    -->
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-4">next</button>
