--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -288,8 +288,27 @@
             <h3 class="modal-title boldfont">Welcome</h3>
             <div class="modal-body">
                 <!--<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+        -->
+
+                <div class="reuse-mod-body">
+                    <em>Lorem Ipsum!</em>  &nbsp;Lorem Ipsum<br />
+                    lorem ipsum lorem ipsum and test.
+                </div>
+                <br />
+                <div class="modal-body-small-it">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nec nibh nec lectus luctus lacinia vitae id lectus.
+                </div>
+                <br />
+                <br />
+                <div class="modal-buttons">
+                    <div class="modal-button-container">
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Finish Tutorial</button><br />
+                    </div>
+                </div>
+
+
+                <!--<img src="~/img/10_tutorial_finish.jpg" class="modal-tutorial-img" />
                     -->
-                <img src="~/img/10_tutorial_finish.jpg" class="modal-tutorial-img" />
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#">next</button>
