Add formatting to center text in modal 4 using cite.css

--- a/LoydCrafts.WebSite/wwwroot/css/site.css
+++ b/LoydCrafts.WebSite/wwwroot/css/site.css
@@ -82,6 +82,8 @@
     font-style: italic;
     font-weight: 600;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .reusesu-table-row {
