--- a/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
+++ b/LoydCrafts.WebSite/Pages/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
 
         <div class="reuse-header">
             <div class="header-image">
-                <img src="https://www.seattleu.edu/media/marketing-communications/branding/spirit-marks/marcom-spirit-marks/SUinterlock.png"
-                     width="65" height="65">
+                <img src="https://www.seattleu.edu/media/marketing-communications/branding/spirit-marks/marcom-spirit-marks/SeattleUMain-red-background.png"
+                     height="65">
             </div>
             <div class="header-title">
                 ReuseSU
