Enabled buttons in Modal 1 in index.cshtml

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -163,10 +163,16 @@
 
                 <div class="modal-buttons">
                     <div class="modal-button-container">
-                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Post an item</button><br />
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button" data-target="#tutorial-modal-2"
+                                data-dismiss="modal" data-toggle="modal">
+                            Post an item
+                        </button><br />
                     </div>
                     <div class="modal-button-container">
-                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Look for items</button><br />
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button" data-target="#tutorial-modal-2"
+                                data-dismiss="modal" data-toggle="modal">
+                            Look for items
+                        </button><br />
                     </div>
                 </div>
 
