Link up modal 2 agree button to link to modal 3 in Index.cshtml

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -233,7 +233,8 @@
 
                     <div class="modal-buttons" style="margin: 0px;">
                         <div class="modal-button-container">
-                            <button type="button" id="agree-button"style="font-size:x-large;" class="btn btn-outline-dark modal-button" disabled>
+                            <button type="button" id="agree-button"style="font-size:x-large;" class="btn btn-outline-dark modal-button" disabled
+                                    data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-3">
                                 Agree
                             </button>
                             <br />
