Modal 3 now links correctly to Modal 4 in Index.cshtml

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -270,7 +270,10 @@
                 <br />
                 <div class="modal-buttons">
                     <div class="modal-button-container">
-                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Get Started</button><br />
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button"
+                                data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-4">
+                            Get Started
+                        </button><br />
                     </div>
                 </div>
 
