--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -313,7 +313,10 @@
                 <br />
                 <div class="modal-buttons">
                     <div class="modal-button-container">
-                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button">Finish Tutorial</button><br />
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button"
+                                data-dismiss="modal" data-toggle="modal" data-target="#">
+                            Finish Tutorial
+                        </button><br />
                     </div>
                 </div>
 
