--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -271,6 +271,48 @@
                 <div class="modal-buttons">
                     <div class="modal-button-container">
                         <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button"
+                                data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-3a">
+                            Get Started
+                        </button><br />
+                    </div>
+                </div>
+
+                <div class="modal-link" data-dismiss="modal">
+                    <a href="">Skip and Go Directly to Site</a>
+                </div>
+                <br />
+
+                <!--<img src="~/img/03_start_tutorial.jpg" class="modal-tutorial-img" />
+                    -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-3a">next</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div id="tutorial-modal-3a" class="modal fade in">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content" style="border-radius: 20px; background-color: #d7d7d7;">
+            <div class="modal-header">
+            </div>
+            <div class="modal-body">
+                <!--<a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" /></a>
+                -->
+                <div class="reuse-mod-body">
+                    Post Management<br />
+                </div>
+                <br />
+                <div class="modal-body-small-it">
+                    Lorem Ipsum
+                </div>
+                <br />
+                <br />
+                <div class="modal-buttons">
+                    <div class="modal-button-container">
+                        <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button"
                                 data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-4">
                             Get Started
                         </button><br />
