Change get started buttons in modal 3/4 to say next in index.cshtml

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -314,7 +314,7 @@
                     <div class="modal-button-container">
                         <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button"
                                 data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-3b">
-                            Get Started
+                            Next
                         </button><br />
                     </div>
                 </div>
@@ -355,7 +355,7 @@
                     <div class="modal-button-container">
                         <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button"
                                 data-dismiss="modal" data-toggle="modal" data-target="#tutorial-modal-4">
-                            Get Started
+                            Next
                         </button><br />
                     </div>
                 </div>
