Condense table in modal 1 in index.cshtml and site.css

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -111,43 +111,43 @@
                         <div class="modal-body-img">
                             <img src="~/img/M1-SUIconSmall.png" height="40" width="33" />
                         </div>
-                        <div class="modal-body-text">
+                        <div class="modal-body-text" style="padding-top:0px;">
                             Picture - text text test lorem ipsum<br />flsjflsj dflj sdflk jsdklfj slfj sdlkfj
                         </div>
                     </div>
 
-                    <div class="table-row">
+                    <div class="reusesu-table-row">
                         <div class="modal-body-img">
                             <img src="~/img/M2-PushPinSmall.png" height="40" width="40" />
                         </div>
-                        <div class="modal-body-text">
+                        <div class="modal-body-text" style="padding-top:0px;">
                             Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlkfj
                         </div>
                     </div>
 
-                    <div class="table-row">
+                    <div class="reusesu-table-row">
                         <div class="modal-body-img">
                             <img src="~/img/M3-MagSmall.png" height="40" width="40" />
                         </div>
-                        <div class="modal-body-text">
+                        <div class="modal-body-text" style="padding-top:0px;">
                             Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlkfj
                         </div>
                     </div>
 
-                    <div class="table-row">
+                    <div class="reusesu-table-row">
                         <div class="modal-body-img">
                             <img src="~/img/M4-EmailSmall.png" height="40" width="40" />
                         </div>
-                        <div class="modal-body-text">
+                        <div class="modal-body-text" style="padding-top:0px;">
                             Picture - text text test lorem ipsum<br />flsjflsj dflj sdflk  sldfj sdlkfj
                         </div>
                     </div>
 
-                    <div class="table-row">
+                    <div class="reusesu-table-row">
                         <div class="modal-body-img">
                             <img src="~/img/M5HandShakeSmall.png" height="40" width="40" />
                         </div>
-                        <div class="modal-body-text">
+                        <div class="modal-body-text" style="padding-top:0px;">
                             Picture - text text test lorem ipsums<br />flsjflsj dflj  sldfj sdlfj sdlkfj
                         </div>
                     </div>
