Remove whitespace at bottom of modal 1 in indes.cshtml

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -164,18 +164,15 @@
                         <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button" data-target="#tutorial-modal-2"
                                 data-dismiss="modal" data-toggle="modal">
                             Post an item
-                        </button><br />
+                        </button>
                     </div>
                     <div class="modal-button-container">
                         <button type="button" style="font-size:x-large;" class="btn btn-outline-dark modal-button" data-target="#tutorial-modal-2"
                                 data-dismiss="modal" data-toggle="modal">
                             Look for items
-                        </button><br />
+                        </button>
                     </div>
                 </div>
-
-
-                <br /><br />
 
                 <!--
                     <a class="nav-link text-dark" asp-area="" asp-page="/02_UserAgreement"><img src="~/img/tut1_welcome_sliced.png" class="reusese-center" /></a>
