Fix formatting in table in modal 1 caused by cached css in index.cshtml and site.css

--- a/LoydCrafts.WebSite/Pages/Index.cshtml
+++ b/LoydCrafts.WebSite/Pages/Index.cshtml
@@ -109,7 +109,7 @@
                         <div class="modal-body-img">
                             <img src="~/img/M1-SUIconSmall.png" height="40" width="33" />
                         </div>
-                        <div class="modal-body-text" style="padding-top:0px;">
+                        <div class="modal-body-text">
                             Picture - text text test lorem ipsum<br />flsjflsj dflj sdflk jsdklfj slfj sdlkfj
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <div class="modal-body-img">
                             <img src="~/img/M2-PushPinSmall.png" height="40" width="40" />
                         </div>
-                        <div class="modal-body-text" style="padding-top:0px;">
+                        <div class="modal-body-text">
                             Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlkfj
                         </div>
                     </div>
@@ -127,7 +127,7 @@
                         <div class="modal-body-img">
                             <img src="~/img/M3-MagSmall.png" height="40" width="40" />
                         </div>
-                        <div class="modal-body-text" style="padding-top:0px;">
+                        <div class="modal-body-text">
                             Picture - text text test lorem ipsums<br />flsjflsj dflj sdflk  sldfj sdlkfj
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         <div class="modal-body-img">
                             <img src="~/img/M4-EmailSmall.png" height="40" width="40" />
                         </div>
-                        <div class="modal-body-text" style="padding-top:0px;">
+                        <div class="modal-body-text">
                             Picture - text text test lorem ipsum<br />flsjflsj dflj sdflk  sldfj sdlkfj
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                         <div class="modal-body-img">
                             <img src="~/img/M5HandShakeSmall.png" height="40" width="40" />
                         </div>
-                        <div class="modal-body-text" style="padding-top:0px;">
+                        <div class="modal-body-text">
                             Picture - text text test lorem ipsums<br />flsjflsj dflj  sldfj sdlfj sdlkfj
                         </div>
                     </div>
