--- a/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
+++ b/LoydCrafts.WebSite/Pages/16_DemoEnd.cshtml
@@ -75,18 +75,17 @@
             <div class="listing-item-text">2 Great earbuds, only $75!</div>
         </div>
         <div class="listing">
-            <div class="listing-img"><img src="~/img/AppleEarbudsSmall.jpg"></div>
-            <a class="listing-item-title" asp-area="" asp-page="/12_ItemReadView" style="float:left">Apple Earbuds 3</></a>
-            <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
-            <div class="listing-item-text">3 Great earbuds, only $75!</div>
-        </div>
-        <div class="listing">
             <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
             <div class="listing-item-title" style="float:left">Apple Earbuds 4</div>
             <div class="listing-item-date-person" style="float:right">January 23, 2020 by dherstad</div>
             <div class="listing-item-text">4 Great earbuds, only $75!</div>
         </div>
-
+        <div class="listing">
+            <div class="listing-img"><img src="~/img/default_image_mtn.png"></div>
+            <div class="listing-item-title" style="float:left">Ftaghn R'leh</></div>
+            <div class="listing-item-date-person" style="float:right">January 24, 2020 by xcalibur</div>
+            <div class="listing-item-text">Ancient Armoire, kept in family for untold generations</div>
+        </div>
     </main>
 </div>
 
