--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -4,6 +4,14 @@
     ViewData["Title"] = "NewPostSUPurchase";
 }
 
+<!-- JS copy/pasted from https://www.tutorialrepublic.com/faq/how-to-launch-bootstrap-modal-on-page-load.php -->
+<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $("#newpost1-modal").modal('show');
+    });
+</script>
 
 <!--
 <a class="nav-link text-dark" asp-area="" asp-page="/06_NewPostCategorySelection"> <img src="~/img/05_su_purchased_q.jpg" /></a>
@@ -48,6 +56,29 @@
 
     </div>
 
+
+
+    <div id="newpost1-modal" class="modal fade in">
+        <div class="modal-dialog modal-lg" style="margin: 0px 200px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
+            <div class="modal-content">
+                <div class="create-post-body" style="height: 400px">
+                    <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
+                    <form action="">
+                        <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
+                        <label for="Yes" style="font-size: 30px;">Yes</label><br>
+                        <input type="radio" id="No" name="SUPurchase" value="No">
+                        <label for="No" style="font-size: 30px;">No</label><br>
+                        <br>
+                    </form>
+                    <!-- Next Button-->
+                    <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/06_NewPostCategorySelection">
+                        Next
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- The main area, for looking at item listings/posts -->
     <main role="main" class="pb-3">
         <div class="listing">
@@ -79,29 +110,3 @@
 </div>
 
 
-
-<div class="create-post-header">
-    Make a New Post<br />
-    <div class="create-post-subheader">Page 1 of 3</div>
-</div>
-
-<div class="container">
-    <main role="main" class="pb-3">
-        <div class="create-post-body" style="height: 400px">
-            <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
-            <form action="">
-                <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
-                <label for="Yes" style="font-size: 30px;">Yes</label><br>
-                <input type="radio" id="No" name="SUPurchase" value="No">
-                <label for="No" style="font-size: 30px;">No</label><br>
-                <br>
-            </form>
-            <!-- Next Button-->
-            <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/06_NewPostCategorySelection">
-                Next
-            </a>
-        </div>
-
-
-    </main>
-</div>
