newpost1 modal now contains the posting info on page 05

--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -59,9 +59,12 @@
 
 
     <div id="newpost1-modal" class="modal fade in">
-        <div class="modal-dialog modal-lg" style="margin: 0px 200px; width: 300px; height: 300px; border-radius: 20px; background-color: #d7d7d7;">
+        <div class="modal-dialog modal-lg" style="border-radius: 20px; background-color: #d7d7d7;">
             <div class="modal-content">
-                <div class="create-post-body" style="height: 400px">
+                <div class="modal-header">
+                    <h3 class="modal-title boldfont">Was this item purchased with SU funds?</h3>
+                </div>
+                <div class="modal-body">
                     <div class="create-post-title" style="margin-bottom: 100px">Was this item purchased with SU funds?</div>
                     <form action="">
                         <input type="radio" id="Yes" name="SUPurchase" value="Yes" checked>
@@ -70,14 +73,17 @@
                         <label for="No" style="font-size: 30px;">No</label><br>
                         <br>
                     </form>
+                </div>
+                <div class="modal-footer">
                     <!-- Next Button-->
                     <a class="btn btn-outline-dark sidebar-upper-button" asp-area="" asp-page="/06_NewPostCategorySelection">
                         Next
                     </a>
-                </div>
+                    </div>
             </div>
         </div>
     </div>
+
 
     <!-- The main area, for looking at item listings/posts -->
     <main role="main" class="pb-3">
