Modal content now hardcoded to be 850px, on page 05

--- a/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
+++ b/LoydCrafts.WebSite/Pages/05_NewPostSUPurchase.cshtml
@@ -90,7 +90,7 @@
 
 <div id="newpost1-modal" class="modal fade in">
     <div class="modal-dialog modal-lg" style="border-radius: 20px; background-color: #d7d7d7;">
-        <div class="modal-content">
+        <div class="modal-content style="width: 850px;"">
             <div class="modal-header">
                 <h3 class="modal-title boldfont">Was this item purchased with SU funds?</h3>
             </div>
@@ -117,7 +117,7 @@
 
 <div id="newpost2-modal" class="modal fade in">
     <div class="modal-dialog modal-lg" style="border-radius: 20px; background-color: #d7d7d7;">
-        <div class="modal-content">
+        <div class="modal-content style="width: 850px;"">
             <div class="modal-header">
                 <h3 class="modal-title boldfont">Was this item purchased with SU funds?</h3>
             </div>
